--- a/tox.ini
+++ b/tox.ini
@@ -1,20 +1,54 @@
 [tox]
-envlist = docs, lint
-skipsdist = true
+envlist = python
+minversion = 3.2
+# https://github.com/jaraco/skeleton/issues/6
+tox_pip_extensions_ext_venv_update = true
+toxworkdir={env:TOX_WORK_DIR:.tox}
+
+
+[testenv]
+deps =
+setenv =
+	PYTHONWARNDEFAULTENCODING = 1
+commands =
+	pytest {posargs}
+passenv =
+	HOME
+usedevelop = True
+extras =
+	testing
+
 
 [testenv:docs]
-deps =
-    -rdocs/requirements.txt
-basepython = python3
+extras =
+	docs
+	testing
+changedir = docs
 commands =
-    sphinx-build -W -b html -d {envtmpdir}/doctrees docs docs/_build/html
+	python -m sphinx -W --keep-going . {toxinidir}/build/html
+	python -m sphinxlint
 
-[testenv:lint]
+[testenv:diffcov]
 deps =
-    salt-lint
-allowlist_externals =
-    /bin/bash
-    /usr/bin/bash
-basepython = python3
+	diff-cover
 commands =
-    bash -exc "salt-lint $(find . -type f -name *.sls | xargs)"
+	pytest {posargs} --cov-report xml
+	diff-cover coverage.xml --compare-branch=origin/main --html-report diffcov.html
+	diff-cover coverage.xml --compare-branch=origin/main --fail-under=100
+
+[testenv:release]
+skip_install = True
+deps =
+	build
+	twine>=3
+	jaraco.develop>=7.1
+passenv =
+	TWINE_PASSWORD
+	GITHUB_TOKEN
+setenv =
+	TWINE_USERNAME = {env:TWINE_USERNAME:__token__}
+commands =
+	python -c "import shutil; shutil.rmtree('dist', ignore_errors=True)"
+	python -m build
+	python -m twine upload dist/*
+	python -m jaraco.develop.create-github-release
